public/stylesheets/screen.css
/* ... */
form {
	clear: both;
	padding: 15px;
	background-color: #fefefd;
	border: 1px solid #bbb;
	border-radius: 4px;
	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
}
form .g-recaptcha {
	margin: 20px 0;
}

label {
	display: block;
	margin-top: 10px;

	text-transform: uppercase;
	font-weight: bold;
	font-family: sans-serif;
	font-size: 0.8rem;
	color: #333;
}
label span {
	margin-right: 0.3rem;
}
label em {
	color: #777;
	font-weight: normal;
}

input[type="text"], input[type="password"] {
	-webkit-appearance: none;

	border: 1px solid #4f5f6e;
	padding: 5px 10px;
	height: 32px;
	max-width: 100%;
	width: 250px;
	box-sizing: border-box;

	border-radius: 3px;
	box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.12);

	font-family: "Open Sans", sans-serif;
	font-size: 0.85rem;
	color: #555;
	line-height: 20px;

	vertical-align: top;

	outline: none;
}
input[type="text"]:focus, input[type="password"]:focus {
	border-color: #1e90ff;
}

button {
	height: 32px;
	box-sizing: border-box;
	vertical-align: top;

	padding: 6px 11px;

	background-color: #1e90ff;
	border: 1px solid #1c60cc;
	border-radius: 3px;

	box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.2);

	font-size: 0.8rem;
	font-family: "Open Sans", sans-serif;
	color: #e0f0ff;

	outline: none;

	cursor: pointer;
}
button:active {
	box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2);
}
button.transparent {
	padding: 6px 0;
	margin: 0 11px;

	opacity: 0.8;

	border: none;
	background: none;
	box-shadow: none;

	color: #4f5f6e;

	transition: opacity 0.1s;
}
button.transparent.noMargin {
	margin: 0;
}
button.transparent:hover {
	opacity: 1.0;
	transition: opacity 0.1s;
}
button[disabled="disabled"] {
	background-color: #ccc;
	border-color: #999;
	color: #999;
	cursor: not-allowed;
}
button[disabled="disabled"].transparent {
	background: none;
	opacity: 0.5;
}
button i.material-icons {
	vertical-align: top;
	margin-right: 0.3rem;
	font-size: 18px;
	width: 18px;
}
button.iconOnly i.material-icons {
	margin-right: 0;
}
button.iconOnly.big i.material-icons {
	font-size: 24px;
	width: 24px;
	margin-top: -3px;
}

form#formLogIn {
	position: relative;

	max-width: 300px;
	width: 100%;
	margin: auto;
	padding: 0;

	border: none;
}
form#formLogIn div.siteMessage {
	padding: 10px;

	border-top-left-radius: 3px;
	border-top-right-radius: 3px;

	font-family: "Open Sans", sans-serif;
	font-size: 0.9rem;

	color: #3f2c24;
}
form#formLogIn div.siteMessage.error {
	position: relative;
	z-index: 5;
	background-color: #fc8c84;
	border: 1px solid #9c6c64;
	margin-bottom: -1px;
}
form#formLogIn input[type="text"], form#formLogIn input[type="password"] {
	height: 62px;
	width: 100%;
	max-width: none;
	padding: 0 15px;
	border-radius: 0;
	box-shadow: none;

	font-family: "Open Sans", sans-serif;
	font-size: 1.4rem;
	font-weight: 300;
	line-height: 62px;
	color: #444;
}
form#formLogIn input[type="text"]:focus, form#formLogIn input[type="password"]:focus {
	border-color: #03a9f4;
	position: relative;
	z-index: 2;
	box-shadow: inset 0px 1px 7px rgba(0, 0, 0, 0.1);
}
form#formLogIn input[name="username"] {
	border: 1px solid #bbb;
}
form#formLogIn input[name="username"]:first-child {
	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
}
form#formLogIn input[name="password"] {
	margin-top: -1px;
	border: 1px solid #bbb;
	border-bottom-left-radius: 3px;
	border-bottom-right-radius: 3px;
}
form#formLogIn button {
	position: absolute;
	z-index: 3;
	bottom: 9px;
	right: 9px;

	height: 46px;
	width: 46px;
	border-radius: 46px;

	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15), inset 0px 1px 0px rgba(255, 255, 255, 0.2);
}
form#formLogIn button i {
	font-size: 24px;
	width: 24px;
	margin-left: -1px;
}

/* SELECT2 OVERRIDES */

.select2-container--default {
	max-width: 100%;
}
.select2-container--default .select2-selection--multiple {
	box-sizing: border-box;
	border: 1px solid #4f5f6e;
	min-height: 32px;
	padding: 5px 0;
	max-width: 100%;

	border-radius: 3px;
	box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.12);

	font-family: "Open Sans", sans-serif;
	font-size: 0.8rem;
	color: #555;
}
.select2-container--default.select2-container--focus .select2-selection--multiple {
	border-color: #1e90ff;
}
.select2-container--default .select2-search--inline .select2-search__field {
	margin-top: 3px;
	margin-bottom: 3px;
}

.select2-dropdown {
	font-family: "Open Sans", sans-serif;
	font-size: 0.9rem;
}
.select2-container--default .select2-selection--multiple .select2-selection__rendered {
	vertical-align: top;
}
.select2-container--default .select2-selection--multiple .select2-selection__choice {
	vertical-align: top;
	height: 19px;
	margin-top: 0;
	border-radius: 2px;
}

/* RESPONSIVE MEDIA QUERIES */

@media screen and (max-width: 1040px) {
	div#conversation section#messages {
		width: 100%;
	}

	div#conversation section#drawPanel {
		width: 100%;
		z-index: 50;
		left: 100%;
	}

	button#toggleCanvas {
		display: block;
	}

	div#modal {
		width: 74%;
		margin-left: 13%;
	}

	#stamps .stamp {
		width: 24%;
	}
}

@media screen and (max-width: 800px) {
	#gabeFace {
		display: none;
	}

	ul#conversations {
		box-shadow: none;
	}

	ul#conversations li.conversation {
		height: auto;
		margin-bottom: 10px;

		border: 1px solid #bbb;
		border-radius: 4px;
		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);

		font-family: "Open Sans", sans-serif;

		white-space: normal;
	}

	ul#conversations li.conversation div.link {
		box-sizing: border-box;
		width: 100%;

		border-right: none;
		border-bottom: 1px solid #e0e0e0;
	}

	ul#conversations li.conversation div.date {
		top: 0;
	}

	ul#conversations li.conversation div.controls {
		position: absolute;
		top: 0;
		right: 0;
		min-width: 48px;
	}
	ul#conversations li.conversation div.controls button {
		left: 14px;
	}
}
/* ... */

